--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SelfEmployeesManagement"
         tools:targetApi="31">
+<!--        <activity-->
+<!--            android:name=".MainActivity"-->
+<!--            android:exported="true">-->
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.os_activity2"
+            android:exported="false" />
+        <activity
+            android:name=".activities.detailgoals"
+            android:exported="false"/>
+        <activity
+            android:name=".activities.os_activity_1"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
