--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -185,6 +185,24 @@
             </intent-filter>
 
         </activity>
+        <activity
+            android:name=".activities.TaskDetailsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.FetchingTaskActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.InsertionTaskActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.MainTaskActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
     </application>
 
